improve env definition